# AgroDT

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  drone_sim  drone_sim.cpp  listener  listener.cpp  mapping.json  subscriber.cpp
0MQ/: publisher.cpp
Interface/: app.py
agrodt_ui/: manage.py
agrodt_ui/agrodt_ui/: asgi.py  settings.py  urls.py  wsgi.py
agrodt_ui/core/static/core/css/: style.css
agrodt_ui/core/templates/core/: home.html
config/: settings.py  urls.py
interface/: apps.py  views.py
interface/static/interface/css/: style.css
interface/static/interface/js/: main.js
interface/templates/interface/: home.html
